tests/negative/gold/prefixed_assign5b_test.gold
tests/negative/prefixed_assign5b_test.toit:6:6: error: No setter method 'some_method=' found.
  pa.some_method += 3
     ^~~~~~~~~~~
Compilation failed.
